Not completed feature set

--- a/memory_match/style.css
+++ b/memory_match/style.css
@@ -94,6 +94,21 @@ div.col-2 {
   position: relative;
 }
 
+.modal-display {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.modal-content {
+  background-color: blue;
+  border: 5px solid lightblue;
+  width: 50%;
+}
+
 
 
 
