--- a/memory_match/style.css
+++ b/memory_match/style.css
@@ -101,12 +101,15 @@ div.col-2 {
   align-items: center;
   height: 100vh;
   width: 100%;
+  z-index: 1;
 }
 
 .modal-content {
   background-color: blue;
   border: 5px solid lightblue;
   width: 50%;
+  text-align: center;
+  font-size: 30px;
 }
 
 
