--- a/memory_match/style.css
+++ b/memory_match/style.css
@@ -35,7 +35,6 @@ main {
 main div {
   height: 24vh;
   margin: 4px;
-  background-image: url(../assets/images/lfz-card.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -48,6 +47,8 @@ main div {
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .card-back {
