--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   height: 100vh;
-  background-image: url(../assets/images/lfz-background.jpg);
+  background-image: url(assets/images/lfz-background.jpg);
   background-size: cover;
 }
 
@@ -8,6 +8,7 @@ header {
   margin: auto;
   font-size: 60px;
   font-weight: bold;
+  color: hotpink;
   padding: 20px;
 }
 
@@ -52,43 +53,43 @@ main div {
 }
 
 .card-back {
-  background-image: url(../assets/images/lfz-card.jpg);
+  background-image: url(assets/images/lfz-card.jpg);
 }
 
 .js-logo {
-  background-image: url(../assets/images/js-logo.png);
+  background-image: url(assets/images/js-logo.png);
 }
 
 .html-logo {
-  background-image: url(../assets/images/html-logo.png);
+  background-image: url(assets/images/html-logo.png);
 }
 
 .github-logo {
-  background-image: url(../assets/images/gitHub-logo.png);
+  background-image: url(assets/images/gitHub-logo.png);
 }
 
 .css-logo {
-  background-image: url(../assets/images/css-logo.png);
+  background-image: url(assets/images/css-logo.png);
 }
 
 .docker-logo {
-  background-image: url(../assets/images/docker-logo.jpg);
+  background-image: url(assets/images/docker-logo.jpg);
 }
 
 .mysql-logo {
-  background-image: url(../assets/images/mysql-logo.jpg);
+  background-image: url(assets/images/mysql-logo.jpg);
 }
 
 .node-logo {
-  background-image: url(../assets/images/node-logo.png);
+  background-image: url(assets/images/node-logo.png);
 }
 
 .php-logo {
-  background-image: url(../assets/images/php-logo.jpeg);
+  background-image: url(assets/images/php-logo.jpeg);
 }
 
 .react-logo {
-  background-image: url(../assets/images/react-logo.png);
+  background-image: url(assets/images/react-logo.png);
 }
 
 div.col-2 {
