--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   height: 100vh;
   background-image: url(assets/images/mlb-background.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 header {
