--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ main div {
   border-radius: 10px;
 }
 
+main div:hover {
+  box-shadow: 0 5px 15px rgba(216, 20, 20, 0.524);
+}
+
 .card-front, .card-back {
   height: 100%;
   width: 100%;
