--- a/style.css
+++ b/style.css
@@ -179,11 +179,6 @@ button {
       font-size: 30px;
     }
 
-    #braek {
-      display: none;
-    }
-  }
-
 @media only screen
   and (min-width: 667px) {
     main div {
@@ -242,6 +237,12 @@ button {
     }
   }
 
+@media only screen
+  and (min-height: 667px) {
+    .modal-content {
+      height: 70%;
+    }
+  }
 .volumeControl {
   position: fixed;
   top: 10px;
