added media queries for modal completed for all iphone sizes 6 through X

--- a/style.css
+++ b/style.css
@@ -243,6 +243,13 @@ button {
       height: 70%;
     }
   }
+
+@media only screen
+  and (min-height: 736px) {
+    .modal-content {
+      height: 58%;
+    }
+  }
 .volumeControl {
   position: fixed;
   top: 10px;
