--- a/style.css
+++ b/style.css
@@ -212,6 +212,11 @@ button {
     main div {
       height: 21vh;
     }
+
+    .homerun {
+      height: 280px;
+      width: 450px;
+    }
   }
 
 @media only screen
