--- a/style.css
+++ b/style.css
@@ -142,6 +142,12 @@ button {
   margin: 20px;
 }
 
+.statsBorder {
+  border: 2px solid yellow;
+  background-color: #B5651D;
+  color: white;
+}
+
 @media only screen
   and (min-width: 375px){
     main div {
