--- a/style.css
+++ b/style.css
@@ -143,9 +143,8 @@ button {
 }
 
 .statsBorder {
-  border: 2px solid yellow;
-  background-color: #B5651D;
-  color: white;
+  border: 2px solid red;
+  background-color: lightblue;
 }
 
 @media only screen
