--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ aside div {
   justify-content: center;
   height: 6vh;
   text-align: center;
-  /* padding-top: 30px; */
   background-color: lightblue;
   margin: 5px;
   font-weight: bold;
@@ -45,6 +44,7 @@ main div {
   background-position: center;
   background-size: contain;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 main div:hover {
