completed hover effect and cursor effect on modal button

--- a/style.css
+++ b/style.css
@@ -140,6 +140,11 @@ button {
   padding: 8px;
   border: 4px solid black;
   margin: 20px;
+  cursor: pointer;
+}
+
+button:hover {
+  box-shadow: 0 5px 15px rgba(216, 20, 20, 0.524);
 }
 
 .statsBorder {
