--- a/style.css
+++ b/style.css
@@ -47,9 +47,22 @@ main div {
   cursor: pointer;
 }
 
-main div:hover {
+.hover:hover {
   box-shadow: 0 5px 15px rgba(216, 20, 20, 0.524);
 }
+
+/* main div:hover {
+  box-shadow: 0 5px 15px rgba(216, 20, 20, 0.524);
+} */
+
+.noHover {
+  pointer-events: none;
+  cursor: none;
+}
+
+/* div .cardEffect {
+  box-shadow: 0 5px 15px rgba(216, 20, 20, 0.524);
+} */
 
 #mainStats {
   border: 2px solid red;
